coding newletter html template & styles

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
             <div class="row row-gap-4">
                 <div class="col-6 col-sm-4 col-xl-2">
                     <div class="wallet_box wallet_box_1 rounded-2 position-relative">
-                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                        <div
+                            class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
                             <div>
                                 <img src="images/Group 19.png">
                             </div>
@@ -142,7 +143,8 @@
                 </div>
                 <div class="col-6 col-sm-4 col-xl-2">
                     <div class="wallet_box wallet_box_2 rounded-2 position-relative">
-                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                        <div
+                            class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
                             <div>
                                 <img src="images/pngaaa 1.png">
                             </div>
@@ -155,7 +157,8 @@
                 </div>
                 <div class="col-6 col-sm-4 col-xl-2">
                     <div class="wallet_box wallet_box_3 rounded-2 position-relative">
-                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                        <div
+                            class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
                             <div>
                                 <img src="images/image 1.png">
                             </div>
@@ -168,7 +171,8 @@
                 </div>
                 <div class="col-6 col-sm-4 col-xl-2">
                     <div class="wallet_box wallet_box_4 rounded-2 position-relative">
-                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                        <div
+                            class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
                             <div>
                                 <img src="images/uniswap-coinuni.png">
                             </div>
@@ -181,7 +185,8 @@
                 </div>
                 <div class="col-6 col-sm-4 col-xl-2">
                     <div class="wallet_box wallet_box_5 rounded-2 position-relative">
-                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                        <div
+                            class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
                             <div>
                                 <img src="images/Group 25.png">
                             </div>
@@ -194,7 +199,8 @@
                 </div>
                 <div class="col-6 col-sm-4 col-xl-2">
                     <div class="wallet_box wallet_box_1 rounded-2 position-relative">
-                        <div class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
+                        <div
+                            class="inner_wallet-box rounded-2 h-100 d-flex flex-column justify-content-center align-items-center">
                             <div>
                                 <img src="images/Group 19.png">
                             </div>
@@ -250,11 +256,13 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <p class="text-light fw-light">آخرین پیشنهاد</p>
                                 <p class="text-light d-flex align-items-center">
-                                    ETH 2,78 
+                                    ETH 2,78
                                     <img src="images/Group 67.png" class="ms-2">
                                 </p>
                             </div>
-                            <a href="#" class="box-btn background_gradient1 text-light px-5 py-2 rounded-3 mt-1 d-inline-block">پیشنهاد سریع</a>
+                            <a href="#"
+                                class="box-btn background_gradient1 text-light px-5 py-2 rounded-3 mt-1 d-inline-block">پیشنهاد
+                                سریع</a>
                         </div>
                     </div>
                 </div>
@@ -279,11 +287,13 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <p class="text-light fw-light">آخرین پیشنهاد</p>
                                 <p class="text-light d-flex align-items-center">
-                                    ETH 2,78 
+                                    ETH 2,78
                                     <img src="images/Group 67.png" class="ms-2">
                                 </p>
                             </div>
-                            <a href="#" class="box-btn background_gradient1 text-light px-5 py-2 rounded-3 mt-1 d-inline-block">پیشنهاد سریع</a>
+                            <a href="#"
+                                class="box-btn background_gradient1 text-light px-5 py-2 rounded-3 mt-1 d-inline-block">پیشنهاد
+                                سریع</a>
                         </div>
                     </div>
                 </div>
@@ -308,11 +318,13 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <p class="text-light fw-light">آخرین پیشنهاد</p>
                                 <p class="text-light d-flex align-items-center">
-                                    ETH 2,78 
+                                    ETH 2,78
                                     <img src="images/Group 67.png" class="ms-2">
                                 </p>
                             </div>
-                            <a href="#" class="box-btn background_gradient1 text-light px-5 py-2 rounded-3 mt-1 d-inline-block">پیشنهاد سریع</a>
+                            <a href="#"
+                                class="box-btn background_gradient1 text-light px-5 py-2 rounded-3 mt-1 d-inline-block">پیشنهاد
+                                سریع</a>
                         </div>
                     </div>
                 </div>
@@ -324,9 +336,11 @@
                     <div class="site__info-box-1 px-3 pt-5 rounded-3 mt-5 position-relative">
                         <div class="text-light">
                             <h4 class="fs-2 fw-bold">سرعت</h4>
-                            <p class="site__info-box-text mt-4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+                            <p class="site__info-box-text mt-4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
+                                چاپ و با استفاده از طراحان گرافیک است</p>
                         </div>
-                        <div class="site__info-box-label rounded-4 d-flex justify-content-center align-items-center position-absolute">
+                        <div
+                            class="site__info-box-label rounded-4 d-flex justify-content-center align-items-center position-absolute">
                             <img src="images/Group 92.png" alt="">
                         </div>
                     </div>
@@ -335,9 +349,11 @@
                     <div class="site__info-box-2 px-3 pt-5 rounded-3 mt-5 position-relative">
                         <div class="text-light">
                             <h4 class="fs-2 fw-bold">امنیت</h4>
-                            <p class="site__info-box-text mt-4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+                            <p class="site__info-box-text mt-4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
+                                چاپ و با استفاده از طراحان گرافیک است</p>
                         </div>
-                        <div class="site__info-box-label rounded-4 d-flex justify-content-center align-items-center position-absolute">
+                        <div
+                            class="site__info-box-label rounded-4 d-flex justify-content-center align-items-center position-absolute">
                             <img src="images/securityuser.png" alt="">
                         </div>
                     </div>
@@ -346,94 +362,12 @@
                     <div class="site__info-box-3 px-3 pt-5 rounded-3 mt-5 position-relative">
                         <div class="text-light">
                             <h4 class="fs-2 fw-bold">پشتیبانی</h4>
-                            <p class="site__info-box-text mt-4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</p>
+                            <p class="site__info-box-text mt-4">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
+                                چاپ و با استفاده از طراحان گرافیک است</p>
                         </div>
-                        <div class="site__info-box-label rounded-4 d-flex justify-content-center align-items-center position-absolute">
+                        <div
+                            class="site__info-box-label rounded-4 d-flex justify-content-center align-items-center position-absolute">
                             <img src="images/Group 87.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid container-md">
-            <div class="header_container_title my-5 d-flex justify-content-between align-items-center">
-                <div class="d-flex align-items-center gap-3">
-                    <div
-                        class="d-flex align-items-center justify-content-center background_gradient1 rounded-circle icon_header_container">
-                        <img src="images/star1.png">
-                    </div>
-                    <div class="text-light">
-                        <h5 class="fs-3 fw-medium header_title">پر بازدیدترین ها</h5>
-                        <span class="fs-5 fw-light header_subtitle">
-                            Trends
-                        </span>
-                    </div>
-                </div>
-                <div class="">
-                    <a href="#">
-                        <span class="fs-5 text-light arro_text">مشاهده همه</span>
-                        <img src="images/arrowleft.png" class="arrow_icon">
-                    </a>
-                </div>
-            </div>
-            <div class="row row-gap-1 row-gap-lg-4">
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="trend__box">
-                        <div class="trend__box-body rounded-4 position-relative">
-                            <img src="images/image 6.png" class="trend__box-body-image position-absolute">
-                            <h3 class="text-light text-end fw-bold">D'EVOLs</h3>
-                            <div class="d-flex justify-content-between align-items-center text-light mt-3">
-                                <span class="fw-light">
-                                    2,78 ETH
-                                    <img src="images/Group 67.png" class="ms-2" style="width: 18px;">
-                                </span>
-                                <p>By Mahsa</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="trend__box">
-                        <div class="trend__box-body rounded-4 position-relative">
-                            <img src="images/image 6 (1).png" class="trend__box-body-image position-absolute">
-                            <h3 class="text-light text-end fw-bold">D'EVOLs</h3>
-                            <div class="d-flex justify-content-between align-items-center text-light mt-3">
-                                <span class="fw-light">
-                                    2,78 ETH
-                                    <img src="images/Group 67.png" class="ms-2" style="width: 18px;">
-                                </span>
-                                <p>By Hossein</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4">
-                    <div class="trend__box">
-                        <div class="trend__box-body rounded-4 position-relative">
-                            <img src="images/image 6 (2).png" class="trend__box-body-image position-absolute">
-                            <h3 class="text-light text-end fw-bold">D'EVOLs</h3>
-                            <div class="d-flex justify-content-between align-items-center text-light mt-3">
-                                <span class="fw-light">
-                                    2,78 ETH
-                                    <img src="images/Group 67.png" class="ms-2" style="width: 18px;">
-                                </span>
-                                <p>By Majid</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4 d-block d-lg-none">
-                    <div class="trend__box">
-                        <div class="trend__box-body rounded-4 position-relative">
-                            <img src="images/image 6-3.png" class="trend__box-body-image position-absolute">
-                            <h3 class="text-light text-end fw-bold">D'EVOLs</h3>
-                            <div class="d-flex justify-content-between align-items-center text-light mt-3">
-                                <span class="fw-light">
-                                    2,78 ETH
-                                    <img src="images/Group 67.png" class="ms-2" style="width: 18px;">
-                                </span>
-                                <p>By Saeid</p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -574,6 +508,25 @@
                             <img src="images/Group 112 (5).png" class="ps-2">
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid container-xl pb-5 mt-5 ">
+            <div class="section_news_letters p-3 rounded-5 position-relative overflow-hidden">
+                <div
+                    class="cover_bg_news_letters text-light d-flex flex-column align-items-center justify-content-center rounded-4 w-100 h-100">
+                    <h5 class="fs-1 fw-bold mb-3">عضویت در خبرنامه</h5>
+                    <p class="fs-5">به جامعه Art Token بپیوندید تا در جریان آخرین اخبار، ویژگی‌ها و نکات مربوط به این
+                        بازار قرار بگیرید.</p>
+                    <form action="" class="w-75 mt-4">
+
+                        <div class="input-group input-group-lg w-100">
+                            <input type="text" placeholder="ایمیل خود را وارد کنید"
+                                class="form-control rounded-start-pill py-3 border-0 text-secondary">
+                            <button
+                                class="input-group-text rounded-end-pill bg_07101D text-light border-0 py-3 px-5">ارسال</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
