--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="position-relative main_image_header d-lg-none mb-5 mb-lg-0">
                             <img src="images/Rectangle 48.png" class="img-fluid d-inline">
                             <span class="position-absolute bg-transparent header_image_backdrop"></span>
-                            <img src="images/f2572704ffdbaeb121525a519d8a18f3.jpg"
+                            <img src="images/12.jpg"
                                 class="position-absolute header_main_image">
                             <div class="count_user_site d-flex justify-content-between align-items-center px-4">
                                 <img src="images/Group 117.png" class="count_user_img">
@@ -93,7 +93,7 @@
                     <div class="position-relative main_image_header">
                         <img src="images/Rectangle 48.png" class="img-fluid d-inline">
                         <span class="position-absolute bg-transparent header_image_backdrop"></span>
-                        <img src="images/f2572704ffdbaeb121525a519d8a18f3.jpg"
+                        <img src="images/12.jpg"
                             class="position-absolute header_main_image">
                         <div class="count_user_site d-flex justify-content-between align-items-center px-4">
                             <img src="images/Group 117.png" class="count_user_img">
