--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="d-flex align-items-center gap-3">
                     <div
                         class="d-flex align-items-center justify-content-center background_gradient1 rounded-circle icon_header_container">
-                        <img src="images/Vector (4).png">
+                        <img src="images/Vector _4_.png">
                     </div>
                     <div class="text-light">
                         <h5 class="fs-3 fw-medium header_title">پیشنهادهای داغ</h5>
@@ -269,7 +269,7 @@
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="hot__bides-box p-3 rounded-4">
                         <div class="hot__bides-box-top position-relative">
-                            <img src="images/image 5 (1).png" class="w-100">
+                            <img src="images/image 5 _1_.png" class="w-100">
                             <div class="hot__bides-box-info position-absolute d-flex gap-2 align-items-center">
                                 <div class="text-light d-flex gap-3 fs-4 rounded-pill py-2 px-4">
                                     <span>8s</span>
@@ -300,7 +300,7 @@
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="hot__bides-box p-3 rounded-4 mb-5">
                         <div class="hot__bides-box-top position-relative">
-                            <img src="images/image 5 (2).png" class="w-100">
+                            <img src="images/image 5 _2_.png" class="w-100">
                             <div class="hot__bides-box-info position-absolute d-flex gap-2 align-items-center">
                                 <div class="text-light d-flex gap-3 fs-4 rounded-pill py-2 px-4">
                                     <span>8s</span>
@@ -429,7 +429,7 @@
                             </div>
                         </div>
                         <div class="top__creators-left">
-                            <img src="images/Group 112 (1).png" class="ps-2">
+                            <img src="images/Group 112 _1_.png" class="ps-2">
                         </div>
                     </div>
                 </div>
@@ -448,7 +448,7 @@
                             </div>
                         </div>
                         <div class="top__creators-left">
-                            <img src="images/Group 112 (2).png" class="ps-2">
+                            <img src="images/Group 112 _2_.png" class="ps-2">
                         </div>
                     </div>
                 </div>
@@ -467,7 +467,7 @@
                             </div>
                         </div>
                         <div class="top__creators-left">
-                            <img src="images/Group 112 (3).png" class="ps-2">
+                            <img src="images/Group 112 _3_.png" class="ps-2">
                         </div>
                     </div>
                 </div>
@@ -486,7 +486,7 @@
                             </div>
                         </div>
                         <div class="top__creators-left">
-                            <img src="images/Group 112 (4).png" class="ps-2">
+                            <img src="images/Group 112 _4_.png" class="ps-2">
                         </div>
                     </div>
                 </div>
@@ -505,7 +505,7 @@
                             </div>
                         </div>
                         <div class="top__creators-left">
-                            <img src="images/Group 112 (5).png" class="ps-2">
+                            <img src="images/Group 112 _5_.png" class="ps-2">
                         </div>
                     </div>
                 </div>
