--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
             </div>
         </div>
     </main>
-    <footer class="mt-5 border-top border-1 border-secondary p-5 overflow-hidden">
+    <footer class="mt-5 p-5 overflow-hidden">
         <div class="container-fluid container-xl position-relative">
             <div class="row z-3 position-relative">
                 <div class="col-12 col-lg-3">
