commenting on html file

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!-- start header section -->
     <header class="position-relative">
         <nav class="navbar navbar-expand-lg mt-3">
             <div class="container-fluid container-md">
@@ -63,8 +64,7 @@
                         <div class="position-relative main_image_header d-lg-none mb-5 mb-lg-0">
                             <img src="images/Rectangle 48.png" class="img-fluid d-inline">
                             <span class="position-absolute bg-transparent header_image_backdrop"></span>
-                            <img src="images/12.jpg"
-                                class="position-absolute header_main_image">
+                            <img src="images/12.jpg" class="position-absolute header_main_image">
                             <div class="count_user_site d-flex justify-content-between align-items-center px-4">
                                 <img src="images/Group 117.png" class="count_user_img">
                                 <span class="text-light fw-medium font_size_24 text-nowrap">500+ هنرمند</span>
@@ -93,8 +93,7 @@
                     <div class="position-relative main_image_header">
                         <img src="images/Rectangle 48.png" class="img-fluid d-inline">
                         <span class="position-absolute bg-transparent header_image_backdrop"></span>
-                        <img src="images/12.jpg"
-                            class="position-absolute header_main_image">
+                        <img src="images/12.jpg" class="position-absolute header_main_image">
                         <div class="count_user_site d-flex justify-content-between align-items-center px-4">
                             <img src="images/Group 117.png" class="count_user_img">
                             <span class="text-light fw-medium font_size_24 text-nowrap">500+ هنرمند</span>
@@ -104,7 +103,9 @@
             </div>
         </div>
     </header>
+    <!-- finish header section -->
     <main>
+        <!-- start wallet main section -->
         <div class="container-fluid container-md">
             <div class="header_container_title my-5 d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center gap-3">
@@ -213,6 +214,8 @@
                 </div>
             </div>
         </div>
+        <!-- finish wallet main section -->
+        <!-- start Hot Bids main section -->
         <div class="container-fluid container-md">
             <div class="header_container_title my-5 d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center gap-3">
@@ -330,6 +333,8 @@
                 </div>
             </div>
         </div>
+        <!-- finish Hot Bids main section -->
+        <!-- start site property main section -->
         <div class="container-fluid container-md">
             <div class="row mt-5 row-gap-5">
                 <div class="col-12 col-sm-6 col-lg-4">
@@ -373,6 +378,8 @@
                 </div>
             </div>
         </div>
+        <!-- finish site property main section -->
+        <!-- start Top Creators main section -->
         <div class="container-fluid container-md">
             <div class="header_container_title my-5 d-flex justify-content-between align-items-center">
                 <div class="d-flex align-items-center gap-3">
@@ -511,6 +518,8 @@
                 </div>
             </div>
         </div>
+        <!-- finish Top Creators main section -->
+        <!-- start newsletter main section -->
         <div class="container-fluid container-xl pb-5 mt-5 ">
             <div class="section_news_letters p-3 rounded-5 position-relative overflow-hidden">
                 <div
@@ -530,7 +539,9 @@
                 </div>
             </div>
         </div>
+        <!-- finish newsletter main section -->
     </main>
+    <!-- start footer section -->
     <footer class="mt-5 p-5 overflow-hidden">
         <div class="container-fluid container-xl position-relative">
             <div class="row z-3 position-relative">
@@ -643,6 +654,7 @@
             <div class="Ellipse_4 rounded-circle z-1 position-absolute"></div>
         </div>
     </footer>
+    <!-- finish footer section -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
