remove old trends section styles

--- a/index.html
+++ b/index.html
@@ -379,6 +379,35 @@
             </div>
         </div>
         <!-- finish site property main section -->
+        <!-- start trends main section -->
+        <div class="container-fluid container-md">
+            <div class="header_container_title my-5 d-flex justify-content-between align-items-center">
+                <div class="d-flex align-items-center gap-3">
+                    <div
+                        class="d-flex align-items-center justify-content-center background_gradient1 rounded-circle icon_header_container">
+                        <img src="images/star1.png">
+                    </div>
+                    <div class="text-light">
+                        <h5 class="fs-3 fw-medium header_title">پر بازدیدترین ها</h5>
+                        <span class="fs-5 fw-light header_subtitle">
+                            Trends
+                        </span>
+                    </div>
+                </div>
+                <div class="">
+                    <a href="#">
+                        <span class="fs-5 text-light arro_text">مشاهده همه</span>
+                        <img src="images/arrowleft.png" class="arrow_icon">
+                    </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4">
+                    <div class="trends__box"></div>
+                </div>
+            </div>
+        </div>
+        <!-- finish trends main section -->
         <!-- start Top Creators main section -->
         <div class="container-fluid container-md">
             <div class="header_container_title my-5 d-flex justify-content-between align-items-center">
