--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-lg-4 mb-5">
+                <div class="col-12 col-sm-6 col-lg-4">
                     <div class="site__info-box-3 px-3 pt-5 rounded-3 mt-5 position-relative">
                         <div class="text-light">
                             <h4 class="fs-2 fw-bold">پشتیبانی</h4>
@@ -401,9 +401,108 @@
                     </a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-4">
-                    <div class="trends__box"></div>
+            <div class="row row-gap-3">
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="trends__box">
+                        <div class="trend__box-image-wrapper w-100 text-center">
+                            <img src="images/image 6.png" alt="image5" class="rounded-5 trend__box-image">
+                        </div>
+                        <div class="trends__box-caption rounded-4 p-3 text-light">
+                            <h4 class="trends__box-caption-title text-end fw-medium fs-3 mb-1">D'EVOLs</h4>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <span class="">
+                                    2,78 ETH
+                                    <img src="images/Group 67.png" alt="group67" class="ms-1">
+                                </span>
+                                <span class="text-light">By Mahsa</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="trends__box">
+                        <div class="trend__box-image-wrapper w-100 text-center">
+                            <img src="images/image 6 (1).png" alt="image5" class="rounded-5 trend__box-image">
+                        </div>
+                        <div class="trends__box-caption rounded-4 p-3 text-light">
+                            <h4 class="trends__box-caption-title text-end fw-medium fs-3 mb-1">D'EVOLs</h4>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <span class="">
+                                    2,78 ETH
+                                    <img src="images/Group 67.png" alt="group67" class="ms-1">
+                                </span>
+                                <span class="text-light">By Amir</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="trends__box">
+                        <div class="trend__box-image-wrapper w-100 text-center">
+                            <img src="images/image 6 (2).png" alt="image5" class="rounded-5 trend__box-image">
+                        </div>
+                        <div class="trends__box-caption rounded-4 p-3 text-light">
+                            <h4 class="trends__box-caption-title text-end fw-medium fs-3 mb-1">D'EVOLs</h4>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <span class="">
+                                    2,78 ETH
+                                    <img src="images/Group 67.png" alt="group67" class="ms-1">
+                                </span>
+                                <span class="text-light">By Saeid</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="trends__box">
+                        <div class="trend__box-image-wrapper w-100 text-center">
+                            <img src="images/image 5.png" alt="image5" class="rounded-5 trend__box-image">
+                        </div>
+                        <div class="trends__box-caption rounded-4 p-3 text-light">
+                            <h4 class="trends__box-caption-title text-end fw-medium fs-3 mb-1">D'EVOLs</h4>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <span class="">
+                                    2,78 ETH
+                                    <img src="images/Group 67.png" alt="group67" class="ms-1">
+                                </span>
+                                <span class="text-light">By Sajad</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="trends__box">
+                        <div class="trend__box-image-wrapper w-100 text-center">
+                            <img src="images/image 5 _1_.png" alt="image5" class="rounded-5 trend__box-image">
+                        </div>
+                        <div class="trends__box-caption rounded-4 p-3 text-light">
+                            <h4 class="trends__box-caption-title text-end fw-medium fs-3 mb-1">D'EVOLs</h4>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <span class="">
+                                    2,78 ETH
+                                    <img src="images/Group 67.png" alt="group67" class="ms-1">
+                                </span>
+                                <span class="text-light">By Amir</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="trends__box">
+                        <div class="trend__box-image-wrapper w-100 text-center">
+                            <img src="images/image 5 _2_.png" alt="image5" class="rounded-5 trend__box-image">
+                        </div>
+                        <div class="trends__box-caption rounded-4 p-3 text-light">
+                            <h4 class="trends__box-caption-title text-end fw-medium fs-3 mb-1">D'EVOLs</h4>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <span class="">
+                                    2,78 ETH
+                                    <img src="images/Group 67.png" alt="group67" class="ms-1">
+                                </span>
+                                <span class="text-light">By Ali</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
